--- a/ticketing-web/package.json
+++ b/ticketing-web/package.json
@@ -1,13 +1,24 @@
 {
+  "scripts": {
+    "start": "node index.js"
+  },
+  "type": "commonjs",
   "name": "ticketing-web",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
+    "esm": "^3.2.25",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
