--- a/ticketing-web/package.json
+++ b/ticketing-web/package.json
@@ -8,12 +8,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
+    "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "ws": "^8.16.0"
