--- a/ticketing-web/package.json
+++ b/ticketing-web/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "start": "run-p start-server start-redis",
+    "start-server": "node index.js",
+    "start-redis": "cd config && python3 redis_py.py"
   },
   "type": "commonjs",
   "name": "ticketing-web",
@@ -25,6 +27,7 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.3.3"
   }
 }
