--- a/.gitignore
+++ b/.gitignore
@@ -6343,3 +6343,238 @@ ticketing-web/node_modules/which-typed-array/package.json
 ticketing-web/node_modules/which-typed-array/README.md
 ticketing-web/node_modules/which-typed-array/.github/FUNDING.yml
 ticketing-web/node_modules/which-typed-array/test/index.js
+ticketing-web/node_modules/@types/bcryptjs/index.d.ts
+ticketing-web/node_modules/@types/bcryptjs/LICENSE
+ticketing-web/node_modules/@types/bcryptjs/package.json
+ticketing-web/node_modules/@types/bcryptjs/README.md
+ticketing-web/node_modules/@types/body-parser/index.d.ts
+ticketing-web/node_modules/@types/body-parser/LICENSE
+ticketing-web/node_modules/@types/body-parser/package.json
+ticketing-web/node_modules/@types/body-parser/README.md
+ticketing-web/node_modules/@types/connect/index.d.ts
+ticketing-web/node_modules/@types/connect/LICENSE
+ticketing-web/node_modules/@types/connect/package.json
+ticketing-web/node_modules/@types/connect/README.md
+ticketing-web/node_modules/@types/express/index.d.ts
+ticketing-web/node_modules/@types/express/LICENSE
+ticketing-web/node_modules/@types/express/package.json
+ticketing-web/node_modules/@types/express/README.md
+ticketing-web/node_modules/@types/express-serve-static-core/index.d.ts
+ticketing-web/node_modules/@types/express-serve-static-core/LICENSE
+ticketing-web/node_modules/@types/express-serve-static-core/package.json
+ticketing-web/node_modules/@types/express-serve-static-core/README.md
+ticketing-web/node_modules/@types/http-errors/index.d.ts
+ticketing-web/node_modules/@types/http-errors/LICENSE
+ticketing-web/node_modules/@types/http-errors/package.json
+ticketing-web/node_modules/@types/http-errors/README.md
+ticketing-web/node_modules/@types/jsonwebtoken/index.d.ts
+ticketing-web/node_modules/@types/jsonwebtoken/LICENSE
+ticketing-web/node_modules/@types/jsonwebtoken/package.json
+ticketing-web/node_modules/@types/jsonwebtoken/README.md
+ticketing-web/node_modules/@types/mime/index.d.ts
+ticketing-web/node_modules/@types/mime/LICENSE
+ticketing-web/node_modules/@types/mime/lite.d.ts
+ticketing-web/node_modules/@types/mime/Mime.d.ts
+ticketing-web/node_modules/@types/mime/package.json
+ticketing-web/node_modules/@types/mime/README.md
+ticketing-web/node_modules/@types/passport/index.d.ts
+ticketing-web/node_modules/@types/passport/LICENSE
+ticketing-web/node_modules/@types/passport/package.json
+ticketing-web/node_modules/@types/passport/README.md
+ticketing-web/node_modules/@types/passport-jwt/index.d.ts
+ticketing-web/node_modules/@types/passport-jwt/LICENSE
+ticketing-web/node_modules/@types/passport-jwt/package.json
+ticketing-web/node_modules/@types/passport-jwt/README.md
+ticketing-web/node_modules/@types/passport-strategy/index.d.ts
+ticketing-web/node_modules/@types/passport-strategy/LICENSE
+ticketing-web/node_modules/@types/passport-strategy/package.json
+ticketing-web/node_modules/@types/passport-strategy/README.md
+ticketing-web/node_modules/@types/qs/index.d.ts
+ticketing-web/node_modules/@types/qs/LICENSE
+ticketing-web/node_modules/@types/qs/package.json
+ticketing-web/node_modules/@types/qs/README.md
+ticketing-web/node_modules/@types/range-parser/index.d.ts
+ticketing-web/node_modules/@types/range-parser/LICENSE
+ticketing-web/node_modules/@types/range-parser/package.json
+ticketing-web/node_modules/@types/range-parser/README.md
+ticketing-web/node_modules/@types/send/index.d.ts
+ticketing-web/node_modules/@types/send/LICENSE
+ticketing-web/node_modules/@types/send/package.json
+ticketing-web/node_modules/@types/send/README.md
+ticketing-web/node_modules/@types/serve-static/index.d.ts
+ticketing-web/node_modules/@types/serve-static/LICENSE
+ticketing-web/node_modules/@types/serve-static/package.json
+ticketing-web/node_modules/@types/serve-static/README.md
+ticketing-web/node_modules/bcryptjs/.npmignore
+ticketing-web/node_modules/bcryptjs/.travis.yml
+ticketing-web/node_modules/bcryptjs/bower.json
+ticketing-web/node_modules/bcryptjs/index.js
+ticketing-web/node_modules/bcryptjs/LICENSE
+ticketing-web/node_modules/bcryptjs/package.json
+ticketing-web/node_modules/bcryptjs/README.md
+ticketing-web/node_modules/bcryptjs/.vscode/settings.json
+ticketing-web/node_modules/bcryptjs/bin/bcrypt
+ticketing-web/node_modules/bcryptjs/dist/bcrypt.js
+ticketing-web/node_modules/bcryptjs/dist/bcrypt.min.js
+ticketing-web/node_modules/bcryptjs/dist/bcrypt.min.js.gz
+ticketing-web/node_modules/bcryptjs/dist/bcrypt.min.map
+ticketing-web/node_modules/bcryptjs/dist/README.md
+ticketing-web/node_modules/bcryptjs/externs/bcrypt.js
+ticketing-web/node_modules/bcryptjs/externs/minimal-env.js
+ticketing-web/node_modules/bcryptjs/scripts/build.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt.js
+ticketing-web/node_modules/bcryptjs/src/bower.json
+ticketing-web/node_modules/bcryptjs/src/wrap.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt/impl.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt/util.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt/prng/accum.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt/prng/isaac.js
+ticketing-web/node_modules/bcryptjs/src/bcrypt/prng/README.md
+ticketing-web/node_modules/bcryptjs/src/bcrypt/util/base64.js
+ticketing-web/node_modules/bcryptjs/tests/quickbrown.txt
+ticketing-web/node_modules/bcryptjs/tests/suite.js
+ticketing-web/node_modules/buffer-equal-constant-time/.npmignore
+ticketing-web/node_modules/buffer-equal-constant-time/.travis.yml
+ticketing-web/node_modules/buffer-equal-constant-time/index.js
+ticketing-web/node_modules/buffer-equal-constant-time/LICENSE.txt
+ticketing-web/node_modules/buffer-equal-constant-time/package.json
+ticketing-web/node_modules/buffer-equal-constant-time/README.md
+ticketing-web/node_modules/buffer-equal-constant-time/test.js
+ticketing-web/node_modules/cookie-parser/HISTORY.md
+ticketing-web/node_modules/cookie-parser/index.js
+ticketing-web/node_modules/cookie-parser/LICENSE
+ticketing-web/node_modules/cookie-parser/package.json
+ticketing-web/node_modules/cookie-parser/README.md
+ticketing-web/node_modules/cookie-parser/node_modules/cookie/HISTORY.md
+ticketing-web/node_modules/cookie-parser/node_modules/cookie/index.js
+ticketing-web/node_modules/cookie-parser/node_modules/cookie/LICENSE
+ticketing-web/node_modules/cookie-parser/node_modules/cookie/package.json
+ticketing-web/node_modules/cookie-parser/node_modules/cookie/README.md
+ticketing-web/node_modules/ecdsa-sig-formatter/CODEOWNERS
+ticketing-web/node_modules/ecdsa-sig-formatter/LICENSE
+ticketing-web/node_modules/ecdsa-sig-formatter/package.json
+ticketing-web/node_modules/ecdsa-sig-formatter/README.md
+ticketing-web/node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.d.ts
+ticketing-web/node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.js
+ticketing-web/node_modules/ecdsa-sig-formatter/src/param-bytes-for-alg.js
+ticketing-web/node_modules/jsonwebtoken/decode.js
+ticketing-web/node_modules/jsonwebtoken/index.js
+ticketing-web/node_modules/jsonwebtoken/LICENSE
+ticketing-web/node_modules/jsonwebtoken/package.json
+ticketing-web/node_modules/jsonwebtoken/README.md
+ticketing-web/node_modules/jsonwebtoken/sign.js
+ticketing-web/node_modules/jsonwebtoken/verify.js
+ticketing-web/node_modules/jsonwebtoken/lib/asymmetricKeyDetailsSupported.js
+ticketing-web/node_modules/jsonwebtoken/lib/JsonWebTokenError.js
+ticketing-web/node_modules/jsonwebtoken/lib/NotBeforeError.js
+ticketing-web/node_modules/jsonwebtoken/lib/psSupported.js
+ticketing-web/node_modules/jsonwebtoken/lib/rsaPssKeyDetailsSupported.js
+ticketing-web/node_modules/jsonwebtoken/lib/timespan.js
+ticketing-web/node_modules/jsonwebtoken/lib/TokenExpiredError.js
+ticketing-web/node_modules/jsonwebtoken/lib/validateAsymmetricKey.js
+ticketing-web/node_modules/jsonwebtoken/node_modules/ms/index.js
+ticketing-web/node_modules/jsonwebtoken/node_modules/ms/license.md
+ticketing-web/node_modules/jsonwebtoken/node_modules/ms/package.json
+ticketing-web/node_modules/jsonwebtoken/node_modules/ms/readme.md
+ticketing-web/node_modules/jwa/index.js
+ticketing-web/node_modules/jwa/LICENSE
+ticketing-web/node_modules/jwa/package.json
+ticketing-web/node_modules/jwa/README.md
+ticketing-web/node_modules/jws/CHANGELOG.md
+ticketing-web/node_modules/jws/index.js
+ticketing-web/node_modules/jws/LICENSE
+ticketing-web/node_modules/jws/package.json
+ticketing-web/node_modules/jws/readme.md
+ticketing-web/node_modules/jws/lib/data-stream.js
+ticketing-web/node_modules/jws/lib/sign-stream.js
+ticketing-web/node_modules/jws/lib/tostring.js
+ticketing-web/node_modules/jws/lib/verify-stream.js
+ticketing-web/node_modules/lodash.includes/index.js
+ticketing-web/node_modules/lodash.includes/LICENSE
+ticketing-web/node_modules/lodash.includes/package.json
+ticketing-web/node_modules/lodash.includes/README.md
+ticketing-web/node_modules/lodash.isboolean/index.js
+ticketing-web/node_modules/lodash.isboolean/LICENSE
+ticketing-web/node_modules/lodash.isboolean/package.json
+ticketing-web/node_modules/lodash.isboolean/README.md
+ticketing-web/node_modules/lodash.isinteger/index.js
+ticketing-web/node_modules/lodash.isinteger/LICENSE
+ticketing-web/node_modules/lodash.isinteger/package.json
+ticketing-web/node_modules/lodash.isinteger/README.md
+ticketing-web/node_modules/lodash.isnumber/index.js
+ticketing-web/node_modules/lodash.isnumber/LICENSE
+ticketing-web/node_modules/lodash.isnumber/package.json
+ticketing-web/node_modules/lodash.isnumber/README.md
+ticketing-web/node_modules/lodash.isplainobject/index.js
+ticketing-web/node_modules/lodash.isplainobject/LICENSE
+ticketing-web/node_modules/lodash.isplainobject/package.json
+ticketing-web/node_modules/lodash.isplainobject/README.md
+ticketing-web/node_modules/lodash.isstring/index.js
+ticketing-web/node_modules/lodash.isstring/LICENSE
+ticketing-web/node_modules/lodash.isstring/package.json
+ticketing-web/node_modules/lodash.isstring/README.md
+ticketing-web/node_modules/lodash.once/index.js
+ticketing-web/node_modules/lodash.once/LICENSE
+ticketing-web/node_modules/lodash.once/package.json
+ticketing-web/node_modules/lodash.once/README.md
+ticketing-web/node_modules/passport/CHANGELOG.md
+ticketing-web/node_modules/passport/LICENSE
+ticketing-web/node_modules/passport/package.json
+ticketing-web/node_modules/passport/README.md
+ticketing-web/node_modules/passport/etc/jsdoc.json
+ticketing-web/node_modules/passport/lib/authenticator.js
+ticketing-web/node_modules/passport/lib/index.js
+ticketing-web/node_modules/passport/lib/sessionmanager.js
+ticketing-web/node_modules/passport/lib/errors/authenticationerror.js
+ticketing-web/node_modules/passport/lib/framework/connect.js
+ticketing-web/node_modules/passport/lib/http/request.js
+ticketing-web/node_modules/passport/lib/middleware/authenticate.js
+ticketing-web/node_modules/passport/lib/middleware/initialize.js
+ticketing-web/node_modules/passport/lib/strategies/session.js
+ticketing-web/node_modules/passport/sponsors/descope-dark.svg
+ticketing-web/node_modules/passport/sponsors/descope.svg
+ticketing-web/node_modules/passport/sponsors/fusionauth.png
+ticketing-web/node_modules/passport/sponsors/fusionauth.svg
+ticketing-web/node_modules/passport/sponsors/loginradius.png
+ticketing-web/node_modules/passport/sponsors/snyk.png
+ticketing-web/node_modules/passport/sponsors/workos.png
+ticketing-web/node_modules/passport-jwt/.travis.yml
+ticketing-web/node_modules/passport-jwt/LICENSE
+ticketing-web/node_modules/passport-jwt/package.json
+ticketing-web/node_modules/passport-jwt/README.md
+ticketing-web/node_modules/passport-jwt/.github/workflows/ci.yml
+ticketing-web/node_modules/passport-jwt/docs/migrating.md
+ticketing-web/node_modules/passport-jwt/lib/auth_header.js
+ticketing-web/node_modules/passport-jwt/lib/extract_jwt.js
+ticketing-web/node_modules/passport-jwt/lib/index.js
+ticketing-web/node_modules/passport-jwt/lib/strategy.js
+ticketing-web/node_modules/passport-jwt/lib/verify_jwt.js
+ticketing-web/node_modules/passport-jwt/lib/helpers/assign.js
+ticketing-web/node_modules/passport-jwt/test/auth_header-test.js
+ticketing-web/node_modules/passport-jwt/test/bootstrap.js
+ticketing-web/node_modules/passport-jwt/test/extractors-test.js
+ticketing-web/node_modules/passport-jwt/test/mock_request.js
+ticketing-web/node_modules/passport-jwt/test/strategy-init-test.js
+ticketing-web/node_modules/passport-jwt/test/strategy-requests-test.js
+ticketing-web/node_modules/passport-jwt/test/strategy-validation-test.js
+ticketing-web/node_modules/passport-jwt/test/strategy-verify-test.js
+ticketing-web/node_modules/passport-jwt/test/testdata.js
+ticketing-web/node_modules/passport-local/LICENSE
+ticketing-web/node_modules/passport-local/package.json
+ticketing-web/node_modules/passport-local/README.md
+ticketing-web/node_modules/passport-local/lib/index.js
+ticketing-web/node_modules/passport-local/lib/strategy.js
+ticketing-web/node_modules/passport-local/lib/utils.js
+ticketing-web/node_modules/passport-strategy/.jshintrc
+ticketing-web/node_modules/passport-strategy/.travis.yml
+ticketing-web/node_modules/passport-strategy/LICENSE
+ticketing-web/node_modules/passport-strategy/package.json
+ticketing-web/node_modules/passport-strategy/README.md
+ticketing-web/node_modules/passport-strategy/lib/index.js
+ticketing-web/node_modules/passport-strategy/lib/strategy.js
+ticketing-web/node_modules/pause/.npmignore
+ticketing-web/node_modules/pause/History.md
+ticketing-web/node_modules/pause/index.js
+ticketing-web/node_modules/pause/Makefile
+ticketing-web/node_modules/pause/package.json
+ticketing-web/node_modules/pause/Readme.md
