--- a/ticketing-web/package.json
+++ b/ticketing-web/package.json
@@ -10,23 +10,35 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.14",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.3.3"
   }
