--- a/ticketing-web/package.json
+++ b/ticketing-web/package.json
@@ -14,10 +14,12 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "aws-sdk": "^2.1550.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
