--- a/node-app/Dockerfile
+++ b/node-app/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:21.6
+FROM node:21.6.0
 WORKDIR /usr/src/app
 COPY package*.json ./    
 RUN npm install
 COPY . .
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
