--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -31,7 +31,7 @@ jobs:
       id: set-var
       run: |
         echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
-        echo "ECR_REPOSITORY=wy-node" >> $GITHUB_ENV
+        echo "ECR_REPOSITORY=byeol-web" >> $GITHUB_ENV
         echo "IMAGE_TAG=${{ github.run_number }}" >> $GITHUB_ENV
         echo "GIT_EMAIL=skystar20095@gmail.com" >> $GITHUB_ENV
         echo "GIT_NAME=skystar200" >> $GITHUB_ENV
