--- a/.github/workflows/node-app.yml
+++ b/.github/workflows/node-app.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Checkout Deployment Repository
       uses: actions/checkout@v3
       with:
-        repository: skystar200/wy-dep
+        repository: skystar200/byeol-web-dev
         ref: main
         token: ${{ secrets.GH_TOKEN }}
 
